- Added the ability to revert to the original BtS unit plot style
- Added the ability to add the following options to the original BtS unit plot style (promo, mission, GG, wounded, upgrade)
- Unit Info Pane: Added option to display moves left for a single unit using a fraction
- Unit Info Pane: Added min/max moves left when multiple units selected

Bug Fixes:

- Advanced Scoreboard: Fixed offset for vassals when grouped
- Advanced Scoreboard: Changed empty vassal indent to a bullet
- Advanced Scoreboard: Changed vassal icon to a gold star for the active player
- Autolog: Added checking of logging to all logging options which was previously ignored
- Autolog: Fixed bug with Autolog onCityOffered logging which was misinterpreting a passed event argument
- IconGrid: Added changes by DanF5771 (two widget data values instead of one)
- IconGrid: Fixed bug where empty icon and stacked bar columns caused following columns to misalign
- MA: Removed event reporting
- MA: Reversed leaderhead parameters so attitude of row leaderhead is shown
- MA: Fixed scrolling display error with Worst Enemy in MA Sit Rep when there is none for a leader
- Main Interface: Fixed click/hover response on (widescreen) research bar
- Main Interface: Era Text and Great Person Bar now hide with No Interface and WorldBuilder
- CDA: Now adjusts position of Liberate button to make sure it doesn't overlap Exit text
- Advanced Scoreboard: Fixed screen redraw after peace treaty is canceled
- No more warning about xmllib being deprecated
- Fixed bug with loading options when viewing Sevopedia from the MAIN MENU
- PLE Unit Hover: Fixed calculation of Movement Points remaining
- Unit Info Pane: Fixed calculation of Movement Points remaining
- Logger: Fixed missing turn headers


FOR MODDERS

New Features:

- New Font File includes citizen icon, great general icon, and blank icon
- Created FontUtil for adding new constants to FontSymbols
    Define symbols in XML: <symbol id [name] [from] [offset]/>